--- a/cc_13.html
+++ b/cc_13.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Employee Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,14 +13,14 @@
     <br>
     <br>
     <main>
-        <button id="addEmployeeBtn">Add Employee</button>
+        <h2>Employee Container</h2>
         <div id="employeeContainer"></div>
     </main>
     <br>
     <br>
     <br>
     <footer>
-        <p>© 2025 Company Inc.</p>
+        <p>Copyright Infromation</p>
     </footer>
     <script src="cc_13.js"></script>
 </body>
